--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,8 +1,12 @@
-{% extends 'bootstrap/base.html' %}
+{% extends 'bootstrap/base.html'%}
+{%block styles %}
+{{super()}}
+<!--Importing the simple mde css and js files  -->
+{{ simplemde.css}}
+{{ simplemde.js }}
+{% endblock %}
 
-<!-- Navbar block -->
+<!-- Navbar block  -->
 {% block navbar %}
-
-    {% include 'navbar.html' %}
-    
+{% include 'navbar.html' %}
 {% endblock %}
