--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,43 +1,58 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html>
 
-<!-- Navbar block -->
-{% block navbar %}
-    <div class="container">
+<head>
+    <meta charset="utf-8">
+    <title></title>
+</head>
 
-        <div class="navbar navbar-inverse" role="navigation" >
-
-            <div class="container">
-
-                <div class="navbar-header">
-
-                    <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-
+<body>
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="/"> Wander's Facts </a>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="/">Home</a>
+                    </li>
+                    <li>
+                        <a href="{{url_for('auth.subscription')}}">Subscribe to Blog</a>
+                    </li>
+                </ul>
+                <div class="dropdown nav navbar-nav navbar-right">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="true">
+                        MENU
+                        <span class="caret"></span>
                     </button>
-
-                    <a href="/" class="navbar-brand">SiteName</a>
-
-                </div>
-
-                <div class="navbar-collapse collapse">
-
-                    <ul class="nav navbar-nav">
-
+                    <ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+                         {% if current_user.is_authenticated %}
                         <li>
-                            <a href="/">Home</a>
+                            <a href="/blogpost/">Create Blog</a>
                         </li>
-                        
+                        <li>
+                            <a href="/admin">Admin</a>
+                        </li>
+                        <li>
+                            <a href="{{url_for('auth.logout')}}">Sign out</a>
+                        </li>
+                         {%endif%}
+                        <li>
+                            <a href="/authenticate/login">Login As Admin</a>
+                        </li>
                     </ul>
-
                 </div>
 
             </div>
-
         </div>
-
     </div>
-{% endblock %}
+</body>
+</html>
